core/runtime-core/src/snapshots/runtime_core__harness_contract__tests__debug_failure_taxonomy_values.snap
---
source: core/runtime-core/src/harness_contract.rs
expression: failure_taxonomy_values()
---
[
    Object {
        "description": String("The task routes to the wrong owner/gate or misses an expected owner."),
        "id": String("route_miss"),
    },
    Object {
        "description": String("The active owner, goal, or scope changes without explicit contract update intent."),
        "id": String("owner_drift"),
    },
    Object {
        "description": String("Large or irrelevant context accumulates in the parent thread or hot prompt surface."),
        "id": String("context_rot"),
    },
    Object {
        "description": String("A tool/skill interface is ambiguous, too verbose, or lacks failure semantics."),
        "id": String("tool_contract_bad"),
    },
    Object {
        "description": String("A completion/pass claim has no executable verifier or evidence reference."),
        "id": String("verification_missing"),
    },
    Object {
        "description": String("The answer depends on volatile external truth without an attributed current source."),
        "id": String("source_stale"),
    },
    Object {
        "description": String("A step can mutate external state without explicit approval, idempotency, or recovery notes."),
        "id": String("side_effect_risk"),
    },
    Object {
        "description": String("A subagent lane is used without isolation, bounded scope, digest, or verification."),
        "id": String("subagent_misuse"),
    },
    Object {
        "description": String("The task cannot be reconstructed from trace/evidence artifacts."),
        "id": String("trace_gap"),
    },
    Object {
        "description": String("A long-running task cannot resume from a step-level durable ledger."),
        "id": String("step_recovery_gap"),
    },
]
